Alignments-Fixes

--- a/src/app/pages/rpautomation/rpa-studio-actionsmenu/rpa-studio-actionsmenu.component.css
+++ b/src/app/pages/rpautomation/rpa-studio-actionsmenu/rpa-studio-actionsmenu.component.css
@@ -251,9 +251,13 @@ background-color: blue !important;
   /* padding-left:15px; */
 }
 .rpa-custom-slider {
-  height: 200px;
+  /* height: 200px;
   position: absolute;
   bottom: -80px;
+  right: 15px; */
+  height: auto;
+  position: absolute;
+  bottom: 15px;
   right: 15px;
 }
 
@@ -357,4 +361,9 @@ ul#versions li:hover {
 }
 .backarrcl img {
   width: 12px;
+}
+
+.rpa-custom-slider button.action-item {
+  display: block;
+  margin-top: 10px;
 }
